# cpp_scrapper-ver-0.1-alpha

./: .main.cpp.swp  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
html_parsing/: CMakeLists.txt  html_parsing.cpp  html_parsing.h
sentiment_analysis/: CMakeLists.txt  Makefile  sentiment_analysis.cpp  sentiment_analysis.h
web_scraping/: CMakeLists.txt  web_scraping.cpp  web_scraping.h
